--- a/CSS_Work/style.css
+++ b/CSS_Work/style.css
@@ -42,9 +42,13 @@ div+p {
 .container {
     display: flex;
     flex-wrap: wrap;
-    flex-flow: row-reverse;
+    
+    /* flex-flow: row-reverse; */
+    /* flex-direction: column-reverse; */
     /* align-items:center; */
     /* justify-content: space-between; */
+    justify-content: space-evenly;
+    align-items:center;
 }
 .Child1, .Child2, .Child3, .Child4 {
     /* background-color: brown; */
@@ -53,7 +57,7 @@ div+p {
     border: 2px dotted goldenrod;
     /* display: inline;    (here height and width will not work)  */
     display:inline-block;
-    margin-left: 100px;
+    /* margin-left: 100px; */
     margin-top: 100px;
 }
 .Child1 {
